test/integration/semantic/operations15.pal
{20,22,23,24,27}
{
    Test that operations work
}
program test(input, output);
const
	foo = 'Party time aafter 415!!';
	bar = 'Shorter string';
type
	colour = (red,green,blue);
var
	i : integer;
	b : boolean;
	r : real;
	c : colour;
begin
	// equality
	
	b := i <> i;
	b := i <> b;	// error
	b := i <> r;	
	b := i <> c;	// error
	b := i <> foo;	// error
	b := i <> bar;	// error


	i := i <> i;	// error
end.
